2005-10-12  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-message.c (message_get_header): For added
	convenience, if the requested header is a Content-* header and a
	top-level MIME part exists, query for the requested header on the
	top-level MIME part and return the value.

	* gmime/gmime-parser.c (parser_step_headers): If we weren't able
	to find the end of the header, save it to our tmp buff before
	refilling our input buffer.
	(parser_step_headers): Append the raw header leftovers in the
	parser_fill() failure case.

2005-09-27  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-message-partial.c
	(g_mime_message_partial_split_message): Reworked the splitting
	logic to try and split on whole-lines.

	* gmime/gmime-multipart-signed.c (g_mime_multipart_signed_verify):
	Return NULL if the number of parts is incorrect.

2005-09-20  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-message-partial.c (header_copy): Only set the value
	if the value is non-NULL. Thanks to Peter Bloomfield for this fix.

2005-08-18  Jeffrey Stedfast  <fejj@novell.com>

	* README: Updated version

	* configure.in: Bumped version to 2.1.16

2005-08-18  Joe Shaw  <joeshaw@novell.com>

	* mono/Makefile.am: Install gmime-api.xml into gapi-2.0

2005-08-17  Joe Shaw  <joeshaw@novell.com>

	* configure.in: Require gtk-sharp 2 for the mono bindings.

	* mono/GMime.metadata: Rename a few items that the gtk-sharp 2
	parser added.

	* mono/gmime-api.raw: Regengerate this using the gtk-sharp 2
	parser.

2005-08-16  Joe Shaw  <joeshaw@novell.com>

	* mono/Makefile.am: libexecdir isn't right; we should be using
	$prefix/lib instead.

2005-07-12  Jeffrey Stedfast  <fejj@novell.com>

	* mono/Makefile.am: libexecdir fixes by Stanislav

	* gmime/internet-address.c: Fixes to various functions that used
	incorrect g_return*_if_fail variants. Thanks to sbrabec@suse.cz

2005-06-23  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (g_mime_utils_header_decode_date): Handle