@@ -1,4 +1,4 @@
-                            GMime, version 2.1.16
+                            GMime, version 2.1.17
                    by Jeffrey Stedfast <fejj@novell.com>
 
 
